adicionado autocadastro de egresso homologado pelo coordenador